Added upload for tinymce

--- a/blog/templates/_base.html
+++ b/blog/templates/_base.html
@@ -245,7 +245,7 @@
                   <div class="col-md-12 col-sm-12 col-xs-12">
                      <div class="copyright text-center">
                         <p>
-                           &copy; Copyright 2020 <strong><a href="https://www.cordialexchange.com">Cordial Exchange</a></strong>. All Rights Reserved!
+                           &copy; Copyright <script>document.write(new Date().getFullYear())</script> <strong><a href="https://www.cordialexchange.com">Cordial Exchange</a></strong>. All Rights Reserved!
                         </p>
                      </div>
                   </div>
