chore: updated font size

--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -1,7 +1,12 @@
 {% extends '_base.html' %}
 {% block content %}
 
-
+<style>
+  h2 {
+    font-weight: bold !important;
+    font-size: 1.8rem !important;
+  }
+</style>
 
           <!-- Start single blog -->
           
